@@ -17,6 +17,9 @@ Daniel Stenberg (27 May 2009)
   the auth credentials back in 7.19.0 and earlier while now you have to set ""
   to get the same effect. His patch brings back the ability to use NULL.
 
+- Claes Jakobsson fixed libcurl-NSS to build fine even without the
+  PK11_CreateGenericObject() function.
+
 Daniel Stenberg (25 May 2009)
 - bug report #2796358 (http://curl.haxx.se/bug/view.cgi?id=2796358) pointed
   out that the cookie parser would leak memory when it parses cookies that are
